Hydrate SEO tags server-side using public URL

--- a/nerin_final_updated/frontend/contact.html
+++ b/nerin_final_updated/frontend/contact.html
@@ -12,7 +12,11 @@
       content="Contactá a NERIN para solicitar cotizaciones de pantallas Samsung originales, soporte técnico inmediato y envíos a todo el país."
     />
     <meta name="robots" content="index,follow" />
-    <link rel="canonical" href="/contact.html" data-seo-absolute="href" />
+    <link
+      rel="canonical"
+      href="__BASE_URL__/contact.html"
+      data-seo-absolute="href"
+    />
     <meta property="og:locale" content="es_AR" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="NERIN Repuestos" />
@@ -23,12 +27,12 @@
     />
     <meta
       property="og:url"
-      content="/contact.html"
+      content="__BASE_URL__/contact.html"
       data-seo-absolute="content"
     />
     <meta
       property="og:image"
-      content="/assets/hero.png"
+      content="__BASE_URL__/assets/hero.png"
       data-seo-absolute="content"
     />
     <meta
@@ -43,12 +47,12 @@
     />
     <meta
       name="twitter:url"
-      content="/contact.html"
+      content="__BASE_URL__/contact.html"
       data-seo-absolute="content"
     />
     <meta
       name="twitter:image"
-      content="/assets/hero.png"
+      content="__BASE_URL__/assets/hero.png"
       data-seo-absolute="content"
     />
     <meta
