--- a/nerin_final_updated/frontend/index.html
+++ b/nerin_final_updated/frontend/index.html
@@ -18,7 +18,11 @@
     <meta name="robots" content="index,follow" />
     <meta name="author" content="NERIN Repuestos" />
     <meta name="theme-color" content="#101935" />
-    <link rel="canonical" href="/index.html" data-seo-absolute="href" />
+    <link
+      rel="canonical"
+      href="__BASE_URL__/index.html"
+      data-seo-absolute="href"
+    />
     <meta property="og:locale" content="es_AR" />
     <meta property="og:type" content="website" />
     <meta
@@ -32,12 +36,12 @@
     <meta property="og:site_name" content="NERIN Repuestos" />
     <meta
       property="og:url"
-      content="/index.html"
+      content="__BASE_URL__/index.html"
       data-seo-absolute="content"
     />
     <meta
       property="og:image"
-      content="/assets/hero.png"
+      content="__BASE_URL__/assets/hero.png"
       data-seo-absolute="content"
     />
     <meta
@@ -55,12 +59,12 @@
     />
     <meta
       name="twitter:url"
-      content="/index.html"
+      content="__BASE_URL__/index.html"
       data-seo-absolute="content"
     />
     <meta
       name="twitter:image"
-      content="/assets/hero.png"
+      content="__BASE_URL__/assets/hero.png"
       data-seo-absolute="content"
     />
     <meta
