--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -33,7 +33,7 @@
     />
     <meta
       property="og:url"
-      content="/product.html"
+      content="__BASE_URL__/product.html"
       data-seo-absolute="content"
       data-product-meta="og:url"
     />
@@ -50,13 +50,13 @@
     />
     <meta
       name="twitter:url"
-      content="/product.html"
+      content="__BASE_URL__/product.html"
       data-seo-absolute="content"
       data-product-meta="twitter:url"
     />
     <link
       rel="canonical"
-      href="/product.html"
+      href="__BASE_URL__/product.html"
       data-seo-absolute="href"
       data-product-meta="canonical"
     />
