--- a/nerin_final_updated/frontend/shop.html
+++ b/nerin_final_updated/frontend/shop.html
@@ -16,7 +16,11 @@
       content="catalogo pantallas samsung, tienda repuestos celulares, service pack argentina"
     />
     <meta name="robots" content="index,follow" />
-    <link rel="canonical" href="/shop.html" data-seo-absolute="href" />
+    <link
+      rel="canonical"
+      href="__BASE_URL__/shop.html"
+      data-seo-absolute="href"
+    />
     <meta property="og:locale" content="es_AR" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="NERIN Repuestos" />
@@ -27,12 +31,12 @@
     />
     <meta
       property="og:url"
-      content="/shop.html"
+      content="__BASE_URL__/shop.html"
       data-seo-absolute="content"
     />
     <meta
       property="og:image"
-      content="/assets/hero.png"
+      content="__BASE_URL__/assets/hero.png"
       data-seo-absolute="content"
     />
     <meta
@@ -47,12 +51,12 @@
     />
     <meta
       name="twitter:url"
-      content="/shop.html"
+      content="__BASE_URL__/shop.html"
       data-seo-absolute="content"
     />
     <meta
       name="twitter:image"
-      content="/assets/hero.png"
+      content="__BASE_URL__/assets/hero.png"
       data-seo-absolute="content"
     />
     <meta
