Update product SEO metadata template

--- a/nerin_final_updated/frontend/product.html
+++ b/nerin_final_updated/frontend/product.html
@@ -1,15 +1,17 @@
 <!doctype html>
-<html lang="es">
+<html lang="es-AR">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
-    <title>Detalle de producto – NERIN</title>
+    <title data-product-meta="title">
+      Repuesto ORIGINAL Service Pack | NERIN Parts
+    </title>
     <meta
       name="description"
-      content="Descubrí el catálogo de pantallas y repuestos originales de NERIN."
+      content="Repuestos originales Service Pack con garantía en NERIN Parts."
       data-product-meta="description"
     />
     <meta
