--- a/nerin_final_updated/frontend/admin.html
+++ b/nerin_final_updated/frontend/admin.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
-      <link rel="stylesheet" href="/style.css?v=mobfix-1" />
+      <link rel="stylesheet" href="/style.css?v=cartfix-2" />
     <style>
       #admin-build-banner {
         margin: 0 auto 1.25rem;
