--- a/nerin_final_updated/frontend/checkout.html
+++ b/nerin_final_updated/frontend/checkout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Estado del pago</title>
-  <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
+  <link rel="stylesheet" href="/css/style.css?v=cartfix-2" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   <link rel="stylesheet" href="/components/np-footer.css?v=np-r2">
   <script src="/components/np-footer.js?v=np-r2" defer></script>
