--- a/nerin_final_updated/frontend/pages/terminos.html
+++ b/nerin_final_updated/frontend/pages/terminos.html
@@ -68,7 +68,7 @@
       }
     }
   </style>
-    <link rel="stylesheet" href="/css/style.css?v=mobfix-1" />
+    <link rel="stylesheet" href="/css/style.css?v=cartfix-2" />
   <link rel="stylesheet" href="/components/np-footer.css?v=np-r2">
   <script src="/components/np-footer.js?v=np-r2" defer></script>
 </head>
