--- a/nerin_final_updated/frontend/seguimiento.html
+++ b/nerin_final_updated/frontend/seguimiento.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover, shrink-to-fit=no"
     />
     <title>Seguimiento de tu pedido – NERIN</title>
-          <link rel="stylesheet" href="/style.css?v=mobfix-1" />
+          <link rel="stylesheet" href="/style.css?v=cartfix-2" />
     <link rel="stylesheet" href="/components/np-footer.css?v=np-r2">
   <script src="/components/np-footer.js?v=np-r2" defer></script>
 </head>
