--- a/nerin_final_updated/import_calc_frontend/index.html
+++ b/nerin_final_updated/import_calc_frontend/index.html
@@ -72,6 +72,17 @@
               <input type="number" step="0.01" id="exchangeRate" name="exchangeRate" value="980" required />
             </div>
             <div class="form-group">
+              <label for="exchangeRateSource">Tipo de dólar</label>
+              <select id="exchangeRateSource" name="exchangeRateSource">
+                <option value="aduana">Dólar Aduana (Oficial BNA)</option>
+                <option value="mep">Dólar MEP / Bolsa</option>
+                <option value="tarjeta">Dólar Tarjeta / Qatar</option>
+                <option value="blue">Dólar Blue / Informal</option>
+                <option value="custom">Personalizado</option>
+              </select>
+              <p id="exchangeRateHint" class="form-hint">Se utiliza el tipo comprador publicado por Banco Nación para despachos en Aduana. Ajustalo si trabajás con otra cotización.</p>
+            </div>
+            <div class="form-group">
               <label for="diRate">Arancel (DI)</label>
               <input type="number" step="0.0001" id="diRate" name="diRate" value="0.08" min="0" max="1" required />
             </div>
@@ -166,6 +177,7 @@
 
       <section class="card" id="resultsCard" hidden>
         <h2>Resultados</h2>
+        <p id="exchangeRateSummary" class="results-hint" hidden></p>
         <div id="summary"></div>
         <table id="breakdownTable">
           <thead>
